# CodeCraft

./: README.md
docs/: .gitignore  requirements.txt
mod/: .gitignore  build.gradle  gradle.properties  settings.gradle
python/: .gitignore  FAQ.md  hatch.toml  pyproject.toml  requirement.txt
python/codecraft/: __init__.py
python/codecraft/_root/: __init__.py  misc_cmd_api.py
python/codecraft/asyncio/: __init__.py  entrypoint.py  misc.py  runner.py
python/codecraft/block/: __init__.py  block.py  properties.py  vanilla.py
python/codecraft/client/: __init__.py  client.py  cmd_runner.py  connection.py  id_maps.py  msg_queue.py
python/codecraft/config/: __init__.py  codecraft.py  config.py
python/codecraft/coro/: __init__.py  coro.py
python/codecraft/entity/: entity.py
python/codecraft/enums/: bases.py  direction.py
python/codecraft/internal/: __init__.py  byte_buf.py  constants.py  default_instance.py  error.py  id_map.py  meta_files.py  meta_folder.py  metaclass.py  observable.py  registry.py  resource.py  typing.py  typings.py  valued_event.py
python/codecraft/internal/byte_buf/: __init__.py  byte_buf.py  byte_utils.py
python/codecraft/internal/cmd/: __init__.py  cmd.py  codecraft.py
python/codecraft/internal/msg/: __init__.py  codecraft.py  msg.py
python/codecraft/item/: item.py
python/codecraft/log/: __init__.py  log.py
python/codecraft/logging/: __init__.py  logging.py
python/codecraft/world/: __init__.py  vanilla.py  world.py  world.pyi
python/examples/: 1k_async.py  1k_sync.py  hello_world.py
webapp/: README.md  requirement.txt
(+49 files in other folders)
